test/translator/error/member.prez
void main() {
  int[] arr = int[]{1,2,3};
  arr.length = 5;
}
